--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
      margin: 0%;
      padding: 0%;
      font-family: sans-serif;
-     background: url(bg.jpg) no-repeat;
-     background-size: cover;
+     background-color: rgb(185, 189, 194);
+     
  }
 
  .login-box{
@@ -13,10 +13,33 @@
      top: 50%;
      left: 50%;
      transform: translate(-50%,-50%);
-     color: darkgray ;
+     color: rgb(10, 10, 10) ;
+ }
+
+ .login{
+     background-color: rgb(186, 192, 194);
+ }
+
+ .tittle{
+     position: absolute;
+     top: 30%;
+     left: 45%;
  }
  
- 
+ .button{
+     position: absolute;
+     top: 70%;
+     left: 30%;
+     height: 20%;
+     width: 30%;
+
+ }
+ .message{
+     position: relative;
+     top: 10%;
+     left: 30%;
+     bottom: 20%;
+ }
  
  
  
